Fix final result to show after last question and style so it is visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,3 +116,9 @@ footer a {
 #result-screen {
   display: none;
 }
+
+#score-result {
+  font-size: x-large;
+  color: rgb(219, 161, 17, 0.9);
+  font-family: Bungee, sans-serif;
+}
